ceva edituri iar

--- a/atestat/Form1.resx
+++ b/atestat/Form1.resx
@@ -4156,4 +4156,7 @@
         xwdqvun4p1//H3Ftf6PVnWgIAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="ctrlPanel.Locked" type="System.Boolean, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+    <value>True</value>
+  </metadata>
 </root>
